# src/controllers/v1/utilidades/MetadataResponse.ts
@@ -1,0 +1,11 @@
+export class MetadataResponse {
+  offset: number;
+  limit: number;
+  count: number;
+
+  constructor(offset: number, limit: number, count: number) {
+    this.offset = offset;
+    this.limit = limit;
+    this.count = count;
+  }
+}
