# src/controllers/v1/utilidades/UsuarioAPI.ts
@@ -1,5 +1,6 @@
 import {Usuario} from '../../../entity/Usuario';
 import {DataOk} from './DataOk';
+import {MetadataResponse} from './MetadataResponse';
 
 export class UsuarioAPI {
   id: string;
@@ -23,6 +24,18 @@ export interface UsuarioUpdateRequest {
   role?: string;
 }
 
+export class UsuarioAPIPaginacion {
+  metadata: MetadataResponse;
+  results: UsuarioAPI[];
+
+  constructor(usuarios: Usuario[], offset: number, limit: number, count: number) {
+    this.metadata = new MetadataResponse(offset, limit, count);
+    this.results = usuarios.map(u => {
+      return new UsuarioAPI(u);
+    });
+  }
+}
+
 export class UsuarioResponseData extends DataOk {
   data: UsuarioAPI;
 
@@ -40,5 +53,22 @@ export class UsuarioResponseLista extends DataOk {
     this.data = usuarios.map(u => {
       return new UsuarioAPI(u);
     });
+  }
+}
+
+export class UsuarioResponsePaginacion extends DataOk {
+  data: UsuarioAPIPaginacion;
+
+  constructor(
+    usuarios: Usuario[],
+    offset: number,
+    limit: number,
+    count: number,
+    status = 200,
+    userMessage: string = null,
+    actions: string = null,
+  ) {
+    super(status, userMessage, actions);
+    this.data = new UsuarioAPIPaginacion(usuarios, offset, limit, count);
   }
 }
